--- a/HealthCareInfromationSystem.csproj
+++ b/HealthCareInfromationSystem.csproj
@@ -22,7 +22,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>true</Prefer32Bit>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -51,12 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="contollers\AppointmentController.cs" />
-    <Compile Include="contollers\AppointmentRequestController.cs" />
-    <Compile Include="contollers\MedicalRecordController.cs" />
-    <Compile Include="contollers\PatientController.cs" />
     <Compile Include="contollers\PersonController.cs" />
-    <Compile Include="contollers\ReferralLetterController.cs" />
     <Compile Include="models\entity\Appointment.cs" />
     <Compile Include="models\entity\AppointmentRequest.cs" />
     <Compile Include="models\entity\MedicalRecord.cs" />
@@ -66,11 +61,6 @@
     <Compile Include="models\users\Person.cs" />
     <Compile Include="models\users\Secretary.cs" />
     <Compile Include="obj\Debug\.NETFramework,Version=v4.7.2.AssemblyAttributes.cs" />
-    <Compile Include="patientsDataSet.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>patientsDataSet.xsd</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="utils\Constants.cs" />
@@ -81,18 +71,6 @@
     <Compile Include="view\LogInForm.Designer.cs">
       <DependentUpon>LogInForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="view\secretaryView\patientsMenuItem\ManagePatientsForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="view\secretaryView\patientsMenuItem\ManagePatientsForm.Designer.cs">
-      <DependentUpon>ManagePatientsForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="view\secretaryView\SecretaryMainForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="view\secretaryView\SecretaryMainForm.Designer.cs">
-      <DependentUpon>SecretaryMainForm.cs</DependentUpon>
-    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -102,29 +80,12 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="view\secretaryView\patientsMenuItem\ManagePatientsForm.resx">
-      <DependentUpon>ManagePatientsForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="view\secretaryView\SecretaryMainForm.resx">
-      <DependentUpon>SecretaryMainForm.cs</DependentUpon>
-    </EmbeddedResource>
     <None Include="contollers\.gitkeep" />
     <None Include="models\entity\.gitkeep" />
     <None Include="models\users\.gitkeep" />
     <None Include="obj\Debug\DesignTimeResolveAssemblyReferencesInput.cache" />
     <None Include="obj\Debug\HealthCareInfromationSystem.csproj.AssemblyReference.cache" />
     <None Include="bin\Debug\HealthCareInfromationSystem.exe.config" />
-    <None Include="patientsDataSet.xsc">
-      <DependentUpon>patientsDataSet.xsd</DependentUpon>
-    </None>
-    <None Include="patientsDataSet.xsd">
-      <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>patientsDataSet.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="patientsDataSet.xss">
-      <DependentUpon>patientsDataSet.xsd</DependentUpon>
-    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -138,11 +99,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="database.accdb">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
