--- a/HealthCareInfromationSystem.csproj
+++ b/HealthCareInfromationSystem.csproj
@@ -71,6 +71,12 @@
     <Compile Include="view\LogInForm.Designer.cs">
       <DependentUpon>LogInForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="view\ManagerView\EquipmentOverviewSearchFilterForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="view\ManagerView\EquipmentOverviewSearchFilterForm.Designer.cs">
+      <DependentUpon>EquipmentOverviewSearchFilterForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="view\ManagerView\ManagerMainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -92,6 +98,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="view\ManagerView\EquipmentOverviewSearchFilterForm.resx">
+      <DependentUpon>EquipmentOverviewSearchFilterForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="view\ManagerView\ManagerMainForm.resx">
       <DependentUpon>ManagerMainForm.cs</DependentUpon>
     </EmbeddedResource>
