--- a/HealthCareInfromationSystem.csproj
+++ b/HealthCareInfromationSystem.csproj
@@ -71,6 +71,12 @@
     <Compile Include="view\LogInForm.Designer.cs">
       <DependentUpon>LogInForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="view\ManagerView\ArrangingEquipmentForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="view\ManagerView\ArrangingEquipmentForm.Designer.cs">
+      <DependentUpon>ArrangingEquipmentForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="view\ManagerView\EquipmentOverviewSearchFilterForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -98,6 +104,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="view\ManagerView\ArrangingEquipmentForm.resx">
+      <DependentUpon>ArrangingEquipmentForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="view\ManagerView\EquipmentOverviewSearchFilterForm.resx">
       <DependentUpon>EquipmentOverviewSearchFilterForm.cs</DependentUpon>
     </EmbeddedResource>
