--- a/HealthCareInfromationSystem.csproj
+++ b/HealthCareInfromationSystem.csproj
@@ -80,6 +80,12 @@
     <Compile Include="view\DoctorView\AllAppointmentsForm.Designer.cs">
       <DependentUpon>AllAppointmentsForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="view\DoctorView\AnamnesisInputForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="view\DoctorView\AnamnesisInputForm.Designer.cs">
+      <DependentUpon>AnamnesisInputForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="view\DoctorView\AppointmentsByDateForm.cs">
       <SubType>Form</SubType>
     </Compile>
