--- a/HealthCareInfromationSystem.csproj
+++ b/HealthCareInfromationSystem.csproj
@@ -98,11 +98,11 @@
     <Compile Include="view\DoctorView\DoctorMainForm.Designer.cs">
       <DependentUpon>DoctorMainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="view\DoctorView\EdditAppointmentForm.cs">
+    <Compile Include="view\DoctorView\EditAppointmentForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="view\DoctorView\EdditAppointmentForm.Designer.cs">
-      <DependentUpon>EdditAppointmentForm.cs</DependentUpon>
+    <Compile Include="view\DoctorView\EditAppointmentForm.Designer.cs">
+      <DependentUpon>EditAppointmentForm.cs</DependentUpon>
     </Compile>
     <Compile Include="view\DoctorView\SingleMedicalRecordForm.cs">
       <SubType>Form</SubType>
