Add delete patient action

--- a/HealthCareInfromationSystem.csproj
+++ b/HealthCareInfromationSystem.csproj
@@ -52,10 +52,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="contollers\AppointmentController.cs" />
+    <Compile Include="contollers\AppointmentRequestController.cs" />
     <Compile Include="contollers\MedicalRecordController.cs" />
     <Compile Include="contollers\PatientController.cs" />
     <Compile Include="contollers\PersonController.cs" />
     <Compile Include="contollers\PremiseController.cs" />
+    <Compile Include="contollers\ReferralLetterController.cs" />
     <Compile Include="models\entity\Appointment.cs" />
     <Compile Include="models\entity\AppointmentRequest.cs" />
     <Compile Include="models\entity\MedicalRecord.cs" />
