--- a/HealthCareInfromationSystem.csproj
+++ b/HealthCareInfromationSystem.csproj
@@ -164,6 +164,12 @@
     <Compile Include="view\SecretaryView\AppointmentRequestForm.Designer.cs">
       <DependentUpon>AppointmentRequestForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="view\SecretaryView\AssignTimeToReferralForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="view\SecretaryView\AssignTimeToReferralForm.Designer.cs">
+      <DependentUpon>AssignTimeToReferralForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="view\SecretaryView\BlockedPatientsForm.cs">
       <SubType>Form</SubType>
     </Compile>
