Add functions for loading data in comboboxes

--- a/HealthCareInfromationSystem.csproj
+++ b/HealthCareInfromationSystem.csproj
@@ -129,6 +129,12 @@
     <Compile Include="view\ManagerView\ArrangingEquipmentForm.Designer.cs">
       <DependentUpon>ArrangingEquipmentForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="view\ManagerView\ComplexRenovationsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="view\ManagerView\ComplexRenovationsForm.Designer.cs">
+      <DependentUpon>ComplexRenovationsForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="view\ManagerView\EquipmentOverviewSearchFilterForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -200,6 +206,9 @@
     </Compile>
     <EmbeddedResource Include="view\ManagerView\ArrangingEquipmentForm.resx">
       <DependentUpon>ArrangingEquipmentForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="view\ManagerView\ComplexRenovationsForm.resx">
+      <DependentUpon>ComplexRenovationsForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="view\ManagerView\EquipmentOverviewSearchFilterForm.resx">
       <DependentUpon>EquipmentOverviewSearchFilterForm.cs</DependentUpon>
