--- a/HealthCareInfromationSystem.csproj
+++ b/HealthCareInfromationSystem.csproj
@@ -54,6 +54,7 @@
     <Compile Include="contollers\AppointmentController.cs" />
     <Compile Include="contollers\AppointmentRequestController.cs" />
     <Compile Include="contollers\MedicalRecordController.cs" />
+    <Compile Include="contollers\MedicineController.cs" />
     <Compile Include="contollers\PatientController.cs" />
     <Compile Include="contollers\PersonController.cs" />
     <Compile Include="contollers\PremiseController.cs" />
@@ -84,6 +85,12 @@
     </Compile>
     <Compile Include="view\DoctorView\AddAppointmentForm.Designer.cs">
       <DependentUpon>AddAppointmentForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="view\DoctorView\AddPrescriptionForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="view\DoctorView\AddPrescriptionForm.Designer.cs">
+      <DependentUpon>AddPrescriptionForm.cs</DependentUpon>
     </Compile>
     <Compile Include="view\DoctorView\AddReferralLetterForm.cs">
       <SubType>Form</SubType>
@@ -220,8 +227,14 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="view\DoctorView\AddPrescriptionForm.resx">
+      <DependentUpon>AddPrescriptionForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="view\DoctorView\AddReferralLetterForm.resx">
       <DependentUpon>AddReferralLetterForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="view\DoctorView\AnamnesisInputForm.resx">
+      <DependentUpon>AnamnesisInputForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="view\DoctorView\AppointmentsByDateForm.resx">
       <DependentUpon>AppointmentsByDateForm.cs</DependentUpon>
