--- a/HealthCareInfromationSystem.csproj
+++ b/HealthCareInfromationSystem.csproj
@@ -64,6 +64,7 @@
     <Compile Include="contollers\SpecialisationContoller.cs" />
     <Compile Include="models\entity\Appointment.cs" />
     <Compile Include="models\entity\AppointmentRequest.cs" />
+    <Compile Include="models\entity\MedicalPrescription.cs" />
     <Compile Include="models\entity\MedicalRecord.cs" />
     <Compile Include="models\entity\Medicine.cs" />
     <Compile Include="models\entity\Premise.cs" />
