--- a/HealthCareInfromationSystem.csproj
+++ b/HealthCareInfromationSystem.csproj
@@ -22,7 +22,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
+    <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -82,6 +82,7 @@
     <Compile Include="utils\BaseFunctions.cs" />
     <Compile Include="utils\Constants.cs" />
     <Compile Include="utils\LoggedInUser.cs" />
+    <Compile Include="utils\Methods.cs" />
     <Compile Include="utils\MyConverter.cs" />
     <Compile Include="view\DoctorView\AddAppointmentForm.cs">
       <SubType>Form</SubType>
@@ -191,6 +192,10 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="view\PatientView\PatientMainForm.Designer.cs" />
+    <Compile Include="view\PatientView\PriorityAppointmentForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="view\PatientView\PriorityAppointmentForm.Designer.cs" />
     <Compile Include="view\SecretaryView\AppointmentRequestForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -269,6 +274,7 @@
     <EmbeddedResource Include="view\PatientView\AllAppointmentsForm.resx" />
     <EmbeddedResource Include="view\PatientView\AppointmentForm.resx" />
     <EmbeddedResource Include="view\PatientView\PatientMainForm.resx" />
+    <EmbeddedResource Include="view\PatientView\PriorityAppointmentForm.resx" />
     <EmbeddedResource Include="view\SecretaryView\AppointmentRequestForm.resx">
       <DependentUpon>AppointmentRequestForm.cs</DependentUpon>
     </EmbeddedResource>
