Add form for equipment quantity and name reformat

--- a/HealthCareInfromationSystem.csproj
+++ b/HealthCareInfromationSystem.csproj
@@ -22,7 +22,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>true</Prefer32Bit>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -109,11 +109,17 @@
     <Compile Include="view\DoctorView\AllAppointmentsForm.Designer.cs">
       <DependentUpon>AllAppointmentsForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="view\DoctorView\AnamnesisInputForm.cs">
+    <Compile Include="view\DoctorView\EquipmentStateForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="view\DoctorView\AnamnesisInputForm.Designer.cs">
-      <DependentUpon>AnamnesisInputForm.cs</DependentUpon>
+    <Compile Include="view\DoctorView\EquipmentStateForm.Designer.cs">
+      <DependentUpon>EquipmentStateForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="view\DoctorView\PerformExaminationForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="view\DoctorView\PerformExaminationForm.Designer.cs">
+      <DependentUpon>PerformExaminationForm.cs</DependentUpon>
     </Compile>
     <Compile Include="view\DoctorView\AppointmentsByDateForm.cs">
       <SubType>Form</SubType>
@@ -266,8 +272,11 @@
     <EmbeddedResource Include="view\DoctorView\AddReferralLetterForm.resx">
       <DependentUpon>AddReferralLetterForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="view\DoctorView\AnamnesisInputForm.resx">
-      <DependentUpon>AnamnesisInputForm.cs</DependentUpon>
+    <EmbeddedResource Include="view\DoctorView\EquipmentStateForm.resx">
+      <DependentUpon>EquipmentStateForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="view\DoctorView\PerformExaminationForm.resx">
+      <DependentUpon>PerformExaminationForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="view\DoctorView\AppointmentsByDateForm.resx">
       <DependentUpon>AppointmentsByDateForm.cs</DependentUpon>
