--- a/HealthCareInfromationSystem.csproj
+++ b/HealthCareInfromationSystem.csproj
@@ -202,6 +202,12 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="view\PatientView\PriorityAppointmentForm.Designer.cs" />
+    <Compile Include="view\PatientView\SearchDoctorForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="view\PatientView\SearchDoctorForm.Designer.cs">
+      <DependentUpon>SearchDoctorForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="view\SecretaryView\AppointmentRequestForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -284,6 +290,9 @@
     <EmbeddedResource Include="view\PatientView\AppointmentForm.resx" />
     <EmbeddedResource Include="view\PatientView\PatientMainForm.resx" />
     <EmbeddedResource Include="view\PatientView\PriorityAppointmentForm.resx" />
+    <EmbeddedResource Include="view\PatientView\SearchDoctorForm.resx">
+      <DependentUpon>SearchDoctorForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="view\SecretaryView\AppointmentRequestForm.resx">
       <DependentUpon>AppointmentRequestForm.cs</DependentUpon>
     </EmbeddedResource>
