Add Form for supplying Dynamic Equipment out of stock

--- a/HealthCareInfromationSystem.csproj
+++ b/HealthCareInfromationSystem.csproj
@@ -22,7 +22,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
+    <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -253,6 +253,12 @@
     <Compile Include="view\SecretaryView\BookingEmergencyForm.Designer.cs">
       <DependentUpon>BookingEmergencyForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="view\SecretaryView\DynamicEquipmentAquirementForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="view\SecretaryView\DynamicEquipmentAquirementForm.Designer.cs">
+      <DependentUpon>DynamicEquipmentAquirementForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="view\SecretaryView\ManagePatientsForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -343,6 +349,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="view\SecretaryView\BookingEmergencyForm.resx">
       <DependentUpon>BookingEmergencyForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="view\SecretaryView\DynamicEquipmentAquirementForm.resx">
+      <DependentUpon>DynamicEquipmentAquirementForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="view\SecretaryView\ManagePatientsForm.resx">
       <DependentUpon>ManagePatientsForm.cs</DependentUpon>
