Refactor dynamic equipment aquirement

--- a/HealthCareInfromationSystem.csproj
+++ b/HealthCareInfromationSystem.csproj
@@ -53,7 +53,7 @@
   <ItemGroup>
     <Compile Include="contollers\AppointmentController.cs" />
     <Compile Include="contollers\AppointmentRequestController.cs" />
-    <Compile Include="contollers\DynamicEquipmentRequestController.cs" />
+    <Compile Include="contollers\EquipmentRequestController.cs" />
     <Compile Include="contollers\EquipmentController.cs" />
     <Compile Include="contollers\MedicalPrescriptionController.cs" />
     <Compile Include="contollers\MedicalRecordController.cs" />
@@ -86,26 +86,29 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="repository\AppointmentRequestSQL.cs" />
     <Compile Include="repository\AppointmentSQL.cs" />
+    <Compile Include="repository\EquipmentRequestSQL.cs" />
     <Compile Include="repository\EquipmentSQL.cs" />
     <Compile Include="repository\IAppointmentRepo.cs" />
     <Compile Include="repository\IAppointmentRequestRepo.cs" />
     <Compile Include="repository\IEquipmentRepo.cs" />
+    <Compile Include="repository\IEquipmentRequestRepo.cs" />
     <Compile Include="repository\IMedicalRecordRepo.cs" />
     <Compile Include="repository\IMedicineRepo.cs" />
     <Compile Include="repository\IPersonRepo.cs" />
     <Compile Include="repository\IPremisseRepo.cs" />
     <Compile Include="repository\IPrescriptionRepo.cs" />
-    <Compile Include="repository\IReferealLeterRepo.cs" />
+    <Compile Include="repository\IReferralLetterRepo.cs" />
     <Compile Include="repository\ISpecialisationRepo.cs" />
     <Compile Include="repository\MedicalRecordSQL.cs" />
     <Compile Include="repository\MedicineSQL.cs" />
     <Compile Include="repository\PersonSQL.cs" />
     <Compile Include="repository\PremisseSQL.cs" />
     <Compile Include="repository\PrescriptionSQL.cs" />
-    <Compile Include="repository\ReferralLeterSQL.cs" />
+    <Compile Include="repository\ReferralLetterSQL.cs" />
     <Compile Include="repository\SpecialisationSQL.cs" />
     <Compile Include="Servise\AppointmentRequestService.cs" />
     <Compile Include="Servise\AppointmentService.cs" />
+    <Compile Include="Servise\EquipmentRequestService.cs" />
     <Compile Include="Servise\EquipmentService.cs" />
     <Compile Include="Servise\MedicalRecordService.cs" />
     <Compile Include="Servise\MedicineRequestService.cs" />
