--- a/HealthCareInfromationSystem.csproj
+++ b/HealthCareInfromationSystem.csproj
@@ -119,6 +119,7 @@
     <Compile Include="Servise\MedicalRecordService.cs" />
     <Compile Include="Servise\MedicineRequestService.cs" />
     <Compile Include="Servise\PatientService.cs" />
+    <Compile Include="Servise\ReferralLetterService.cs" />
     <Compile Include="Servise\SheduleAppointmentService.cs" />
     <Compile Include="utils\BaseFunctions.cs" />
     <Compile Include="utils\Constants.cs" />
